Part 8: Highlighting Tapped or Clicked UI Elements

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html>
 <link href="css/styles.css" rel="stylesheet">
 <body>
-
+<script src="lib/iscroll.js"></script>
 <script src="css/source-sans-pro.js"></script>
 <script src="lib/handlebars.js"></script>
 <script id="home-tpl" type="text/x-handlebars-template">
